<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        android:layout_gravity="center"
        android:text="@string/sign_info"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_place_list"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/reg_place_day"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/reg_day"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_place_memo"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/reg_memo"
            android:inputType="textMultiLine"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:maxLines="1"/>

    </LinearLayout>
        
    <ImageView
        android:layout_width="150sp"
        android:layout_height="100sp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:id="@+id/select_img"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_img"
        android:layout_gravity="center"
        android:text="@string/bt_select_img"
        android:layout_marginTop="10sp"/>

    <Button
        android:layout_marginTop="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_info"
        android:text="@string/bt_save"
        android:layout_gravity="center"/>


</LinearLayout>